Fix issue from commit a couple days ago that broke the InputfieldPageTitle/InputfieldPageName interaction when creating a page. Also fix issue with Inputfield labels sometimes having their open/collapsed click events take over other events (like the image grid mode in some instances).

--- a/wire/modules/Inputfield/InputfieldPageAutocomplete/InputfieldPageAutocomplete.css
+++ b/wire/modules/Inputfield/InputfieldPageAutocomplete/InputfieldPageAutocomplete.css
@@ -62,7 +62,7 @@
 	.InputfieldPageAutocomplete p .ui-icon {
 		/* icon placement */
 		position: absolute; 
-		top: 2px; 
+		top: 0.3em; 
 		left: 1px; 
 		opacity: 0.5; 
 	}
